# wxmsn

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  example.cxx  example.h  mac_install.sh  mingw32msvc-linux-configure.sh  reconf.sh  testpo.sh  win_pack.sh  wxmsn.prj  wxwin.m4
include/: CChatArea.h  CChatFrame.h  CChatHandler.h  CChatTab.h  CConnec.h  CConnectPanel.h  CConsole.h  CContact.h  CContactFrame.h  CContactList.h  CCoreHandler.h  CData.h  CEntryText.h  CGroup.h  CGui.h  CListEvent.h  CMsnAuth.h  CParseSocket.h  CPopup.h  CSsl.h  Events.h  Makefile.am  Makefile.in  SCPrefs.h  Utils.h  arraydeclaration.h  base64.h  defines.h  msncon.h  sha1.h  wxmsn.h
include/html/: CHtml.h  CHtmlCell.h  CHtmlFilt.h  CHtmlPars.h  CHtmlPrint.h  CHtmlProc.h  CHtmlTag.h  CHtmlWin.h  CWinPars.h  m_templ.h
plugins/: Makefile  Makefile.am  Makefile.in
plugins/amarok/: Makefile  wxmsnamarok.sh
plugins/quodlibet/: wxmsnql.py
plugins/rhythmbox/: wxmsnrhythmbox.py  wxmsnrhythmbox.rb-plugin
plugins/xmms/: Makefile  Makefile-BMP  Makefile-audacious  Makefile-xmms  Makefile.am  Makefile.in  wxmsnxmms.c
po/: Makevars  POTFILES.in  fr.gmo  fr.po  wxmsn.pot
po/test/: fr.mo
src/: CChatArea.cc  CChatFrame.cxx  CChatHandler.cxx  CChatTab.cxx  CConnec.cxx  CConnectPanel.cxx  CConsole.cxx  CContact.cc  CContactFrame.cxx  CContactList.cc  CCoreHandler.cxx  CData.cc  CEntryText.cc  CGroup.cc  CGui.cxx  CListEvent.cxx  CMsnAuth.cxx  CParseSocket.cxx  CPopup.cc  CSsl.cxx  Events.cxx  Makefile.am  Makefile.in  SCPrefs.cxx  Utils.cxx  base64.c  chl.c  msncon.cxx  sha1.c  tabimages.xpm  wxMSN.xpm
src/html/: CHtmlCell.cpp  CHtmlFilt.cpp  CHtmlPars.cpp  CHtmlPrint.cpp  CHtmlTag.cpp  CHtmlWin.cpp  CWinPars.cpp  Makefile.am  Makefile.in  m_dflist.cpp  m_fonts.cpp  m_hline.cpp  m_image.cpp  m_layout.cpp  m_links.cpp  m_list.cpp  m_pre.cpp  m_style.cpp  m_tables.cpp  main.cpp
src/resources/xrc/: ConnectPanel.xrc  ConnectPanel.xrc.bak
