## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

wxmsn_includedir = $(pkgincludedir)

wxmsn_include_DATA = \
	CContact.h\
	CContactList.h\
	CGroup.h\
	CPopup.h\
	CConnec.h\
	wxmsn.h\
	arraydeclaration.h\
	CData.h\
	CConsole.h\
	CSsl.h\
	CGui.h\
	CMsnAuth.h\
	CParseSocket.h\
	md5.h\
	sha1.h\
	Utils.h\
	CChatFrame.h\
	CChatTab.h\
	CChatArea.h\
	CEntryText.h\
	defines.h\
	CContactFrame.h\
	CConnectPanel.h\
	Events.h\
	CCoreHandler.h\
	CListEvent.h

EXTRA_DIST = $(wxmsn_include_DATA)
